Exception Handler 전체조회 적용 완료